--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,234 +1,285 @@
 <section class="header-hero">
-    <header class="header">
-        <div class="container-box">
+  <header class="header">
+    <div class="container-box">
+      <div class="hero-section">
+        <div class="logo-case">
+          <a class="logotype link" lang="en" href="/">
+            <svg width="50" height="50" class="Logo-icon">
+              <use href="./images/sprite.svg#logo"></use>
+            </svg>
 
+            <span class="logo-icecream">icecream</span>
+          </a>
 
+          <div class="nav-block">
+            <nav class="navigation-case">
+              <ul class="navigation-list list">
+                <li class="navigation-list-item">
+                  <a class="nav accent link" href="">Home</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="nav link" href="">About us</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="nav link" href="">How it’s made?</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="nav link" href="">Our products</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="nav link" href="">Contact</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
 
-            <div class="hero-section">
-
-
-                <div class="logo-case">
-
-                    <a class="logotype link" lang="en" href="/">
-                        <svg width="50" height="50" class="Logo-icon">
-                            <use href="./images/sprite.svg#logo"></use>
-                        </svg>
-
-                        <span class="logo-icecream">icecream</span>
-                    </a>
-
-                    <div class="nav-block">    
-                        <nav class="navigation-case">
-                            <ul class="navigation-list list">
-                                <li class="navigation-list-item"><a class="nav accent link" href="">Home</a></li>
-                                <li class="navigation-list-item"><a class="nav link" href="">About us</a></li>
-                                <li class="navigation-list-item"><a class="nav link" href="">How it’s made?</a></li>
-                                <li class="navigation-list-item"><a class="nav link" href="">Our products</a></li>
-                                <li class="navigation-list-item"><a class="nav link" href="">Contact</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-
-
-                    <div class="btn-case">
-                        
-                        <div class="burger-case">
-                            <button type="button" class="burger-btn" data-menu-button>
-                                <svg class="burger-icon" width="20" height="20">
-                                    <use href="./images/sprite.svg#burgermenu"></use>
-                                </svg>
-                            </button>                    
-                        </div>
-
-                    
-                        <button class="Buy-now-button" type="button">Buy now</button>
-                    </div>
-
-                
-                </div>
-                
-
+          <div class="btn-case">
+            <div class="burger-case">
+              <button type="button" class="burger-btn" data-menu-button>
+                <svg class="burger-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#burgermenu"></use>
+                </svg>
+              </button>
             </div>
 
+            <button class="Buy-now-button" type="button">Buy now</button>
+          </div>
         </div>
-
-        <div class="box-content">
-            <div class="left-case"> 
-                <div class="slogan-case">
-            
-                    <div class="slogan-title">
-                        <h1 class="hero-title">ice cream<br> made with</h1>
-                        <p class="slogan-prefix">passion</p>
-                
-                        <ul class="header-but-list list">
-                            <li class="header-but-item"><a class="header-but-link link" href="">Products</a></li>
-                            <li class="header-but-item"><a class="header-but-link link" href="">How it’s made?</a></li>
-                        </ul>
-                    </div>
-            
-                    <div class="notitia-block">
-                
-                        <picture class="notitia-img">
-                
-                            <source srcset="./images/hero-header/desktop-milk.webp 1x, ./images/hero-header/desktop-milk@2x.webp 2x"
-                                media="(min-width: 1280px)" type="image/webp">
-                            <source srcset="./images/hero-header/tablet-milk.webp 1x, ./images/hero-header/tablet-milk@2x.webp 2x"
-                                media="(min-width: 768px)" type="image/webp">
-                
-                            <source srcset="./images/hero-header/desktop-milk.png 1x, ./images/hero-header/desktop-milk@2x.png 2x"
-                                media="(min-width: 1280px)">
-                            <source srcset="./images/hero-header/tablet-milk.png 1x, ./images/hero-header/tablet-milk@2x.png 2x"
-                                media="(min-width: 768px)">
-                
-                            <img src="./images/hero-header/tablet-milk.png" alt="графин с молоком">
-                
-                        </picture>
-                
-                        <div class="title-case">
-                
-                            <p class="title-notitia">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et</p>
-                
-                            <a class="title-but-link link" href="">
-                                <svg class="title-button-icon" width="18" height="18">
-                                    <use href="./images/sprite.svg#right"></use>
-                                </svg>
-                            </a>
-                
-                        </div>
-                
-                
-                    </div>
-            
-            </div>
-        </div>
-
-        <div class="center-case">
-
-
-            <div class="hero-content"></div>
-            
-            <div class="hero-case">
-                <picture>
-                    <source srcset="
-                                ./images/hero-header/desktop-ice-cream.webp    1x,
-                                ./images/hero-header/desktop-ice-cream@2x.webp 2x
-                                " media="(min-width: 1280px)" type="image/webp" />
-                    <source srcset="
-                                ./images/hero-header/desktop-ice-cream.png    1x,
-                                ./images/hero-header/desktop-ice-cream@2x.png 2x
-                                " media="(min-width: 1280px)" />
-                    <source srcset="
-                                ./images/hero-header/tablet-ice-cream.webp    1x,
-                                ./images/hero-header/tablet-ice-cream@2x.webp 2x
-                                " media="(min-width: 768px)" type="image/webp" />
-                    <source srcset="
-                                ./images/hero-header/tablet-ice-cream.png    1x,
-                                ./images/hero-header/tablet-ice-cream@2x.png 2x
-                                " media="(min-width: 768px)" />
-                    <source srcset="
-                                ./images/hero-header/mobile-ice-cream.webp    1x,
-                                ./images/hero-header/mobile-ice-cream@2x.webp 2x
-                                " media="(min-width: 280px)" type="image/webp" />
-                    <source srcset="
-                                ./images/hero-header/mobile-ice-cream.png    1x,
-                                ./images/hero-header/mobile-ice-cream@2x.png 2x
-                                " media="(min-width: 280px)" />
-                    <img src="./images/hero-header/mobile-ice-cream.png" alt="рожковое мороженое" />
-                </picture>
-            
-            </div>
-            
-            
-        </div>
-
-        <div class="right-case">
-            <div class="soooooo-tasty">
-            
-            
-                <div class="soooooo-box">
-                    <ul class="auxiliary-list list">
-                        <li class="auxiliary-item">
-                            <p class="figures">16</p>
-                            <p class="signature">cafes</p>
-                        </li>
-                        <li class="auxiliary-item">
-                            <p class="figures">23</p>
-                            <p class="signature">food trucks</p>
-                        </li>
-                    </ul>
-                </div>
-            
-            
-                <div class="soooooo-image">
-                    <picture class="interest-block">
-                
-                        <source srcset="./images/hero-header/desktop-girl.webp 1x, ./images/hero-header/desktop-girl@2x.webp 2x"
-                            media="(min-width: 1280px)" type="image/webp">
-                        <source srcset="./images/hero-header/tablet-girl.webp 1x, ./images/hero-header/tablet-girl@2x.webp 2x"
-                            media="(min-width: 768px)" type="image/webp">
-                
-                        <source srcset="./images/hero-header/desktop-girl.png 1x, ./images/hero-header/desktop-girl@2x.png 2x"
-                            media="(min-width: 1280px)">
-                        <source srcset="./images/hero-header/tablet-girl.png 1x, ./images/hero-header/tablet-girl@2x.png 2x"
-                            media="(min-width: 768px)">
-                
-                        <img src="./images/hero-header/tablet-girl.png" alt="девушка ест мороженое">
-                
-                    </picture>
-                </div>
-            
-            
-            </div>
-        </div>
+      </div>
     </div>
 
-        
-        
-    </header>
+    <div class="box-content">
+      <div class="left-case">
+        <div class="slogan-case">
+          <div class="slogan-title">
+            <h1 class="hero-title">
+              ice cream<br />
+              made with
+            </h1>
+            <p class="slogan-prefix">passion</p>
+
+            <ul class="header-but-list list">
+              <li class="header-but-item">
+                <a class="header-but-link link" href="">Products</a>
+              </li>
+              <li class="header-but-item">
+                <a class="header-but-link link" href="">How it’s made?</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="notitia-block">
+            <picture class="notitia-img">
+              <source
+                srcset="
+                  ./images/hero-header/desktop-milk.webp    1x,
+                  ./images/hero-header/desktop-milk@2x.webp 2x
+                "
+                media="(min-width: 1280px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/hero-header/tablet-milk.webp    1x,
+                  ./images/hero-header/tablet-milk@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+
+              <source
+                srcset="
+                  ./images/hero-header/desktop-milk.png    1x,
+                  ./images/hero-header/desktop-milk@2x.png 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/hero-header/tablet-milk.png    1x,
+                  ./images/hero-header/tablet-milk@2x.png 2x
+                "
+                media="(min-width: 768px)"
+              />
+
+              <img
+                src="./images/hero-header/tablet-milk.png"
+                alt="графин с молоком"
+              />
+            </picture>
+
+            <div class="title-case">
+              <p class="title-notitia">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et
+              </p>
+
+              <a class="title-but-link link" href="">
+                <svg class="title-button-icon" width="18" height="18">
+                  <use href="./images/sprite.svg#right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="center-case">
+        <div class="hero-content"></div>
+
+        <div class="hero-case">
+          <picture>
+            <source
+              srcset="
+                ./images/hero-header/desktop-ice-cream.webp    1x,
+                ./images/hero-header/desktop-ice-cream@2x.webp 2x
+              "
+              media="(min-width: 1280px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/hero-header/desktop-ice-cream.png    1x,
+                ./images/hero-header/desktop-ice-cream@2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/hero-header/tablet-ice-cream.webp    1x,
+                ./images/hero-header/tablet-ice-cream@2x.webp 2x
+              "
+              media="(min-width: 768px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/hero-header/tablet-ice-cream.png    1x,
+                ./images/hero-header/tablet-ice-cream@2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                ./images/hero-header/mobile-ice-cream.webp    1x,
+                ./images/hero-header/mobile-ice-cream@2x.webp 2x
+              "
+              media="(min-width: 280px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/hero-header/mobile-ice-cream.png    1x,
+                ./images/hero-header/mobile-ice-cream@2x.png 2x
+              "
+              media="(min-width: 280px)"
+            />
+            <img
+              src="./images/hero-header/mobile-ice-cream.png"
+              alt="рожковое мороженое"
+            />
+          </picture>
+        </div>
+      </div>
+
+      <div class="right-case">
+        <div class="soooooo-tasty">
+          <div class="soooooo-box">
+            <ul class="auxiliary-list list">
+              <li class="auxiliary-item">
+                <p class="figures">16</p>
+                <p class="signature">cafes</p>
+              </li>
+              <li class="auxiliary-item">
+                <p class="figures">23</p>
+                <p class="signature">food trucks</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="soooooo-image">
+            <picture class="interest-block">
+              <source
+                srcset="
+                  ./images/hero-header/desktop-girl.webp    1x,
+                  ./images/hero-header/desktop-girl@2x.webp 2x
+                "
+                media="(min-width: 1280px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/hero-header/tablet-girl.webp    1x,
+                  ./images/hero-header/tablet-girl@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+
+              <source
+                srcset="
+                  ./images/hero-header/desktop-girl.png    1x,
+                  ./images/hero-header/desktop-girl@2x.png 2x
+                "
+                media="(min-width: 1280px)"
+              />
+              <source
+                srcset="
+                  ./images/hero-header/tablet-girl.png    1x,
+                  ./images/hero-header/tablet-girl@2x.png 2x
+                "
+                media="(min-width: 768px)"
+              />
+
+              <img
+                src="./images/hero-header/tablet-girl.png"
+                alt="девушка ест мороженое"
+              />
+            </picture>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 </section>
 
 <!-- mob -->
 
 <div class="background-close bat-close" bat-close bat-ref></div>
 
-    <div class="backdrop is-open" data-menu>
-        
-        
-            <div class="modal-block">
+<div class="backdrop is-open" data-menu>
+  <div class="mobil-block">
+    <button type="button" class="mobil-button-close" data-menu-close>
+      <svg class="mobil-button-icon" width="14" height="14">
+        <use href="./images/sprite.svg#close"></use>
+        <!-- <use href=""></use> -->
+      </svg>
+    </button>
 
-                <button type="button" class="modal-button-close" data-menu-close>
-                    <svg class="modal-button-icon" width="14" height="14">
-                        <use href="./images/sprite.svg#close"></use>
-                        <!-- <use href=""></use> -->
-                    </svg>
-                </button>
+    <div class="btn-buy-now">
+      <a class="mobil-button link" lang="en" href="/">
+        <span class="title-buy-now">Buy now</span>
 
-
-                <div class="btn-buy-now">
-                    <a class="modal-button link" lang="en" href="/">
-
-                        <span class="title-buy-now">Buy now</span>
-
-                        <svg width="5" height="8" class="mod-icon">
-                            <use href="./images/sprite.svg#minr"></use>
-                        </svg>
-                    </a>
-
-                </div>
-
-
-                <ul class="modal-list list">
-                    <li class="modal-item"><a class="modal-link accent link"  href="">Home</a></li>
-                    <li class="modal-item"><a class="modal-link link"  href="">About us</a></li>
-                    <li class="modal-item"><a class="modal-link link"  href="">How it’s made?</a></li>
-                    <li class="modal-item"><a class="modal-link link"  href="">Our products</a></li>
-                    <li class="modal-item"><a class="modal-link link"  href="">Contact</a></li>
-                </ul>
-        
+        <svg width="5" height="8" class="mod-icon">
+          <use href="./images/sprite.svg#minr"></use>
+        </svg>
+      </a>
     </div>
 
-
+    <ul class="mobil-list list">
+      <li class="mobil-item">
+        <a class="mobil-link accent link" href="">Home</a>
+      </li>
+      <li class="mobil-item">
+        <a class="mobil-link link" href="">About us</a>
+      </li>
+      <li class="mobil-item">
+        <a class="mobil-link link" href="">How it’s made?</a>
+      </li>
+      <li class="mobil-item">
+        <a class="mobil-link link" href="">Our products</a>
+      </li>
+      <li class="mobil-item"><a class="mobil-link link" href="">Contact</a></li>
+    </ul>
+  </div>
 </div>
-
-
