--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -11,6 +11,9 @@
 }
 .advanteges {
     background-color: var(--accent-bgc);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center 90%;
 }
 
 .advanteges_title {
