--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <!--ABOUT-->
-<section class="about">
+<section class="about" id="about-us">
   <div class="about-container">
     <p class="about-label-title">tradition and love</p>
     <h2 class="about-title">how it’s made?</h2>
@@ -56,7 +56,7 @@
         <p class="about-third-paragraph">
           Aliquam erat volutpat. Aenean accumsan.
         </p>
-        <button type="button" class="about-button" about-modal-open>
+        <button class="about-button" type="button" about-modal-open>
           Read more
           <svg class="about-arrow" width="7" height="10">
             <use href="./images/sprite.svg#icon-arrow-btn"></use>
