--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="how-made">
   <div class="advantages__container">
     <h2 class="visually-hidden">Преимущества</h2>
     <ul class="advantages__list">
