--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -4,12 +4,13 @@
 
   .hero-img {
     position: absolute;
-  right: 0;
-  bottom: 0;
+    right: 0;
+    bottom: 0;
   }
+
   .header-container {
     position: relative;
-      height: 502px;
+    height: 502px;
   }
 }
 
@@ -18,11 +19,13 @@
 .hero-accent {
   display: none;
 }
+
 .hero-title-box {
   position: absolute;
   z-index: 5;
   top: 38%;
 }
+
 .hero-title {
   font-family: 'Titan One', sans-serif;
   font-weight: 400;
@@ -34,15 +37,19 @@
   max-width: 220px;
   margin-bottom: 20px;
 }
+
 .hero-title-accent {
   color: $text-red-color;
   font-size: 48px;
   line-height: 46px;
 }
+
 .hero-list {
   display: flex;
+
   .hero-item {
     margin-right: 8px;
+
     &:not(:first-child) {
       margin-right: 0;
     }
@@ -70,34 +77,35 @@
     }
   }
 }
-.hero-item + .hero-item .button {
+
+.hero-item+.hero-item .button {
   background: $text-white-color;
   color: $text-red-color;
+
   &:hover,
   &:focus {
     background: #ecebeb;
   }
 }
+
 .hero-img {
   padding-top: 92px;
   width: 346px;
-    margin-left: auto;
+  margin-left: auto;
   display: flex;
-    padding-right: 32px;
-  
+  padding-right: 32px;
+
   justify-content: flex-end;
-  background-image: radial-gradient(
-    circle closest-corner at 70% 50%,
-    $text-pink-color 65%,
-    transparent 50%
-  );
- 
+  background-image: radial-gradient(circle closest-corner at 70% 50%,
+      $text-pink-color 65%,
+      transparent 50%);
+
 
   .hero-main-img {
     display: inline-block;
     max-width: 177px;
     height: auto;
-     }
+  }
 }
 
 // @media screen and (min-width: 480px) {
@@ -108,32 +116,38 @@
 
 @media screen and (min-width: 768px) {
   .hero {
-     .hero-img {
-    right: auto;
-    left: 199px;
-        }
+    .hero-img {
+      right: auto;
+      left: 199px;
+    }
+
     .header-container {
       padding: 0 34px;
       display: flex;
       height: 399px;
     }
   }
+
   .hero-description,
   .counter-list,
   .hero-accent {
     display: flex;
   }
+
   .hero-list {
     margin-bottom: 19px;
   }
+
   .hero-description-img {
     max-width: 124px;
     margin-top: 19px;
   }
+
   .hero-title-box {
     top: 102px;
-       margin-top: 0;
+    margin-top: 0;
   }
+
   .hero-img {
     padding: 0;
     padding-right: 110px;
@@ -145,37 +159,43 @@
     justify-content: flex-end;
     align-items: flex-end;
     background-image: radial-gradient(circle closest-corner at 64% 45%, #ffa5ba 68%, transparent 50%);
-  
-  .hero-main-img {
-    
-    margin-left: 0;
-    max-width: 143px;
+
+    .hero-main-img {
+
+      margin-left: 0;
+      max-width: 143px;
+    }
   }
-  }
+
   .hero-title {
     max-width: 162px;
     font-size: 22px;
     line-height: 26px;
   }
+
   .hero-title-accent {
     font-size: 34px;
     line-height: 31px;
   }
+
   .hero-description {
     align-items: flex-end;
     display: flex;
-    
+
   }
+
   .hero-description-section {
     padding-bottom: 6px;
     max-width: 114px;
-        .hero-description-text {
+
+    .hero-description-text {
       font-weight: 400;
       font-size: 8px;
       line-height: 10px;
       color: $text-white-color;
       margin-bottom: 7px;
     }
+
     .button {
       padding: 0;
       width: 18px;
@@ -185,11 +205,13 @@
       align-items: center;
     }
   }
+
   .arrow {
     width: 6px;
     height: 6px;
     fill: $text-red-color;
   }
+
   .counter-box {
     position: absolute;
     bottom: 0;
@@ -198,17 +220,21 @@
     flex-direction: column;
     justify-content: flex-end;
   }
+
   .counter-list {
     display: inline-block;
     margin-left: auto;
     margin-bottom: 72px;
+
     .counter-item:not(:last-child) {
       margin-bottom: 13px;
     }
   }
+
   .counter-item {
     position: relative;
   }
+
   .counter-circle {
     width: 16px;
     height: 16px;
@@ -220,6 +246,7 @@
     transform: translateX(45%) translateY(-10%);
 
   }
+
   .counter-description {
     max-width: 51px;
     font-weight: 400;
@@ -229,6 +256,7 @@
     text-align: right;
     z-index: 7;
     position: relative;
+
     .counter-number {
       font-family: 'Titan One', sans-serif;
       font-weight: 400;
@@ -236,8 +264,9 @@
       line-height: 32px;
       letter-spacing: 0.04em;
       color: $text-red-color;
-        }
+    }
   }
+
   .hero-accent-img {
     z-index: 3;
   }
@@ -245,20 +274,24 @@
 
 @media screen and (min-width: 1280px) {
   .hero {
-    max-width: 1600px;
+    max-width: 2000px;
     margin-left: auto;
     margin-right: auto;
+
     .hero-img {
-    
-    left: 286px;
-        }
+
+      left: 286px;
+    }
+
     .header-container {
       height: 665px;
       padding: 0 112px;
     }
   }
+
   .hero-list {
     margin-bottom: 56px;
+
     .hero-item {
       margin-right: 15px;
     }
@@ -268,9 +301,11 @@
     max-width: 188px;
     margin-top: 56px;
   }
+
   .hero-description {
     .hero-item {
       margin-bottom: 45px;
+
       &:not(:last-child) {
         margin-right: 30px;
       }
@@ -280,27 +315,31 @@
   .hero-title-box {
     top: 171px;
   }
+
   .hero-img {
     width: 538px;
     height: 613px;
     padding-right: 183px;
     background-image: radial-gradient(circle closest-corner at 60% 43%, #ffa5ba 67%, transparent 50%);
-  
-   .hero-main-img {
-    margin-left: 119px;
-    max-width: 236px;
-  } 
+
+    .hero-main-img {
+      margin-left: 119px;
+      max-width: 236px;
+    }
   }
+
   .hero-title {
     max-width: 277px;
     font-size: 38px;
     line-height: 44px;
     margin-bottom: 25px;
   }
+
   .hero-title-accent {
     font-size: 58px;
     line-height: 52px;
   }
+
   .hero-item {
     .button {
       padding: 10px 20px;
@@ -310,41 +349,51 @@
       height: 40px;
     }
   }
+
   .hero-description-section {
     padding-bottom: 9px;
     max-width: 200px;
+
     .hero-description-text {
       font-size: 14px;
       line-height: 18px;
       margin-bottom: 20px;
     }
+
     .button {
       padding: 0;
       width: 26px;
       height: 26px;
     }
   }
+
   .arrow {
     width: 10px;
     height: 10px;
   }
+
   .counter-box {
     right: 112px;
   }
+
   .counter-list {
     margin-bottom: 109px;
+
     .counter-item:not(:last-child) {
       margin-bottom: 30px;
     }
   }
+
   .counter-circle {
     width: 30px;
     height: 30px;
   }
+
   .counter-description {
     max-width: 92px;
     font-size: 14px;
     line-height: 18px;
+
     .counter-number {
       font-size: 46px;
       line-height: 53px;
