--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -2,8 +2,14 @@
   <div class="header-container">
     <a href="./index.html" class="logo">
       <picture class="logo-picture">
-        <source srcset="./images/logo.webp 1x, ./images/logo@2x.webp 2x" />
-        <source srcset="./images/logo.png 1x, ./images/logo@2x.png 2x" />
+        <source
+          srcset="./images/logo.webp 1x, ./images/logo@2x.webp 2x"
+          type="image/webp"
+        />
+        <source
+          srcset="./images/logo.png 1x, ./images/logo@2x.png 2x"
+          type="image/png"
+        />
 
         <img src="./images/logo.png" alt="logo company" />
       </picture>
@@ -11,29 +17,30 @@
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="#" class="nav-link">Home</a>
+          <a href="./index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">About us</a>
+          <a href="#about-us" class="nav-link">About us</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">How it's made?</a>
+          <a href="#how-made" class="nav-link">How it's made?</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Our products</a>
+          <a href="#Our-products" class="nav-link">Our products</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Contact</a>
+          <a href="#Contact" class="nav-link">Contact</a>
         </li>
       </ul>
     </nav>
     <div class="menu-box">
-      <button href="#" class="burger-menu" header-modal-open>
+      <button class="burger-menu" type="button" header-modal-open>
         <svg class="burger-icon" width="20px" height="12px">
           <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
       </button>
-      <button class="buy" type="button" data-modal-open>Buy now
+      <button class="buy" type="button" data-modal-open>
+        Buy now
         <svg class="buy-arrow">
           <use href="./images/sprite.svg#icon-arrow-btn"></use>
         </svg>
