--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,22 +1,21 @@
 .gallery {
-    box-sizing: border-box;
-    font-size: 62.5%;
-    margin: 0;
-    padding: 0; 
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1600px;
-    background: $bg-secondary-color;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 2000px;
+  background: $bg-secondary-color;
 
-    background-image: linear-gradient(
-    to bottom,
-    $bg-secondary-color 45%,
-    $text-white-color 45%,
-    $text-white-color 60%, );
+  background-image: linear-gradient(to bottom,
+      $bg-secondary-color 45%,
+      $text-white-color 45%,
+      $text-white-color 60%, );
 
-    .header-container {
-      padding: 0 12px;
-    }
+  .header-container {
+    padding: 0 12px;
+  }
 }
 
 .masonry {
@@ -37,9 +36,9 @@
   }
 
   figure {
-      margin: 0;
-      padding: 0;
-      box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
   }
 }
 
@@ -93,6 +92,7 @@
   grid-column: 19 / 22;
   grid-row: 4 / 8;
 }
+
 // @media screen and (min-width: 768px) {
 //   .masonry {
 //   width: 100%;
@@ -105,4 +105,3 @@
 
 // }
 // }
-
