--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -168,6 +168,7 @@
     display: block;
     margin: 0 auto;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .contacts-button-franchise {
@@ -187,7 +188,7 @@
     height: 44px;
     display: block;
     margin: 0 auto;
-
+    cursor: pointer;
 }
 
 .contacts-white-icon {
