фиксированный хедер скрипт + якоря

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
-<section class="advantages">
+<section id="how-it's-made" class="advantages">
     <div class="container">
-        <h2 class="visually-hidden">Advantages</h2>
+        <h2  class="visually-hidden">Advantages</h2>
         <ul class="advantages__list list">
             <li class="advantages__item">
                 <p class="advantages__item-title">721</p>
