--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
-<section class="contacts">
+<section id="contact" class="contacts">
   <div class="container">
-    <h1 class="contacts__header" id="contact" hidden>Our contacts</h1>
+    <h1 class="contacts__header"  hidden>Our contacts</h1>
     <ul id="contacts" class="contacts__position">
       <li class="contacts__section">
         <p class="contacts__name-building">CAFE</p>
