--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,12 +8,12 @@
       </h1>
       <ul class="hero-button-list list">
         <li class="hero-button-item">
-          <a href="#" class="hero-button-link link">
+          <a href="#products" class="hero-button-link link">
             <button class="hero-button-products" type="button">Products</button>
           </a>
         </li>
         <li class="hero-button-item">
-          <a href="#" class="hero-button-link link">
+          <a href="#how-it's-made" class="hero-button-link link">
             <button class="hero-button-made" type="button">
               How it’s made?
             </button>
