--- a/src/partials/mobile.html
+++ b/src/partials/mobile.html
@@ -16,19 +16,19 @@
     </button>
     <ul class="mobile-menu-nav">
         <li class="mobile-menu-nav-item mobile-menu-first-item">
-            <a class="mobile-menu-nav-link" href="#">Home</a>
+            <a class="mobile-menu-nav-link" href="index.html">Home</a>
         </li>
         <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="#">About us</a>
+            <a class="mobile-menu-nav-link" href="#about-us">About us</a>
         </li>
         <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="#">How it's made?</a>
+            <a class="mobile-menu-nav-link" href="#how-it's-made">How it's made?</a>
         </li>
         <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="#">Our products</a>
+            <a class="mobile-menu-nav-link" href="#products">Our products</a>
         </li>
         <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="#">Contacts</a>
+            <a class="mobile-menu-nav-link" href="#contacts">Contacts</a>
         </li>
     </ul>
 </div>
