--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <!--PRODUCTS-->
-<section class="section-products">
+<section id="products" class="section-products">
   <div class="container products-container">
-    <p id="products" class="subtitle">100% natural</p>
+    <p  class="subtitle">100% natural</p>
     <h2 class="title">Products</h2>
     <ul class="products-list list">
       <li class="products-list-item ice-cream">
