--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,6 +2,75 @@
 .header {
   background-color: $accent-background-color;
 }
+//.container-header {
+//  background-color: $accent-background-color;
+//}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+}
+
+.sticky + .content {
+  padding-top: 300px;
+}
+
+  
+  //@media screen and (min-width: 320px) {
+  //  padding-top: 80px;
+  //  }
+    
+  //  @media screen and (min-width: 768px) {
+  //    padding-top: 110px;
+  //  }
+
+  // @media screen and (min-width: 1200px) {
+  //    padding-top: 105px;
+
+  //  }
+  
+
+
+
+.sticky .container-header {
+  background-color: $accent-background-color;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  
+
+  &::before,
+  &::after {
+    z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  left: 10px;
+  width: 100%;
+  top: 80%;
+  max-width:300px;
+  background: $accent-background-color;
+  -webkit-box-shadow: 0 15px 10px $ellipse-background-color;
+  -moz-box-shadow: 0 15px 10px $ellipse-background-color;
+  box-shadow: 0 15px 10px $ellipse-background-color;
+  -webkit-transform: rotate(-2deg);
+  -moz-transform: rotate(-2deg);
+  -o-transform: rotate(-2deg);
+  -ms-transform: rotate(-2deg);
+  transform: rotate(-2deg);
+  }
+
+  &::after {
+    -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(2deg);
+  -o-transform: rotate(2deg);
+  -ms-transform: rotate(2deg);
+  transform: rotate(2deg);
+  right: 10px;
+  left: auto;
+  }
+}
+
 
 .logo-block {
   display: flex;
