--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,9 @@
 
     <button class="modal-btn" type="button">
       <span class="modal-btn-text">Buy now</span>
-
+      <svg class="modal-btn-icon">
+        <use href="./images/sprite/sprite_projects.svg#contacts-icon-btn"></use>
+      </svg>
     </button>
 
     <!-- MOBILE MENU -->
