--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -9,11 +9,15 @@
 
   @media screen and (min-width: 768px) {
     width: 768px;
-    padding: 0 34px;    
+    padding: 0 34px;
   }
 
   @media screen and (min-width: 1280px) {
     width: 1280px;
     padding: 0 115px;
+
+    .page-header & {
+      position: relative;
+    }
   }
 }
