--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -122,6 +122,136 @@
         }
 }
 
+//backdrop
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: 300ms linear;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.contacts-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 95%;
+    background-image: url("../images/contacts-usa-map.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    overflow: scroll;
+    // border-radius: 22px;
+
+
+    @media screen and (min-width: 480px) {
+        max-width: 440px;
+    }
+}
+
+.contacts-btn-close {
+    position: absolute;
+    top: 13px;
+    right: 13px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid white;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: box-shadow 300ms linear;
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2), 
+                    0px 4px 4px rgba(0, 0, 0, 0.1), 
+                    1px 4px 6px rgba(0, 0, 0, 0.2);;
+    }
+}
+
+.contacts-modal-2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 95%;
+    background-color: $bg-mobile-menu;;
+    // background-image: url("../images/contacts-usa-map.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    overflow: scroll;
+    // border-radius: 22px;
+
+    @media screen and (min-width: 480px) {
+        max-width: 440px;
+    }
+}
+.contacts-modal-form {
+    padding: 60px;
+}
+.contacts-modal-label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+    font-size: 13px;
+    color: $color-dark;
+}
+
+.contacts-modal-input {
+    width: 100%;
+    height: 40px;
+    padding: 8px;
+    background-color: $bg-light-pink;
+    font-size: 16px;
+    border: none;
+    border-radius: 15px;
+    padding-left: 15px;
+    font-size: 13px;
+    color: $color-dark;
+    cursor: pointer;
+}
+
+.contacts-form-massange {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    display: block;
+    resize: none;
+    border-radius: 15px;
+    background-color: $bg-light-pink;
+    border: none;
+    cursor: pointer;
+}
+
+.contacts-form-btn {
+    margin: auto;
+}
+
+.contacts-btn-close-2 {
+    transition: background-color 300ms linear;
+        &:hover,
+        &:focus {
+            background-color: $bg-secondary;
+        }
+}
 
 @media screen and (min-width: 768px) {
     .contacts {
