add id_fix modal_scroll

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
     <div class="container">
         <div class="about__titles">
             <p class="section-subtitle">tradition and love</p>
