--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="advantages">
     <div class="container">
     <h2 class="visually-hidden">advantages</h2>
     <ul class="advantages__list list">
